Fixed letter-spacing by adding px at end

--- a/sass/components/date_picker/_default.date.scss
+++ b/sass/components/date_picker/_default.date.scss
@@ -152,7 +152,7 @@
 .picker__day--today {
   position: relative;
   color: #595959;
-  letter-spacing: -.3;
+  letter-spacing: -.3px;
   padding: .75rem 0;
   font-weight: 400;
   border: 1px solid transparent;
